--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_WC_PROJECT_ID = 'c465e5298d1a7d0b7cdce89173ed6fdb',
-VITE_PROXY = '0x27f95808519b96838D73155Fe83a30F6a8B2Ea66'
+VITE_PUBLIC_VOTE_PROXY = '0x27f95808519b96838D73155Fe83a30F6a8B2Ea66'
+VITE_ZK_VOTE_PROXY = '0xea22e17abd5d2fd53df911bb21ca861ecdba2436'
